--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -277,6 +277,7 @@ $DIR_CHMOD  = <!-- tmpl_var security_default_directory_permissions default="0755
 $CAPTCHA_TYPE = 'Google_reCAPTCHA';
 $RECAPTCHA_PARAMS = {
 	on_subscribe_form =>  '<!-- tmpl_var captcha_on_subscribe_form default="0" -->',
+	type              =>  '<!-- tmpl_var captcha_reCAPTCHA_type default="v2" -->',
     public_key        =>  '<!-- tmpl_var captcha_reCAPTCHA_public_key -->',
     private_key       =>  '<!-- tmpl_var captcha_reCAPTCHA_private_key -->',
 };
