--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -108,7 +108,10 @@
 								name="<!-- tmpl_var name escape=HTML -->" 
 								id="ddm_<!-- tmpl_var name escape=HTML -->" 
 								value="<!-- tmpl_var given_value escape=HTML -->"
-								placeholder="<!-- tmpl_if comment --> (required)<!-- /tmpl_if -->"  
+								<!-- tmpl_if required -->
+									placeholder="(required)"
+									required="required"
+								<!-- /tmpl_if -->  
 							>
 						</div>
 					</div>
@@ -139,24 +142,24 @@
 		
 		<!-- tmpl_if add_recaptcha_js -->
 			<!-- tmpl_if recaptcha_invisible -->
-			    <script src='https://www.google.com/recaptcha/api.js'></script>
+  		  	  <script src='https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit' async defer></script>
+  			  <script>
+  			  	$(document).ready(function() {
+  			  		$(".g-recaptcha").each(function() {
+  			  		    var object = $(this);
+  			  			var sitekey = object.parents('form').find(".sitekey").val(); 
+  			  		    grecaptcha.render(object.attr("id"), {
+  			  		        "sitekey" : sitekey,
+  			  		        "callback" : function(token) {
+  			  		            object.parents('form').find(".g-recaptcha-response").val(token);
+  			  		            object.parents('form').submit();
+  			  		        }
+  			  		    });
+  			  		});
+  			  	});
+  			  </script>
 			<!-- tmpl_else -->
-		  	  <script src='https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit' async defer></script>
-			  <script>
-			  	$(document).ready(function() {
-			  		$(".g-recaptcha").each(function() {
-			  		    var object = $(this);
-			  			var sitekey = object.parents('form').find(".sitekey").val(); 
-			  		    grecaptcha.render(object.attr("id"), {
-			  		        "sitekey" : sitekey,
-			  		        "callback" : function(token) {
-			  		            object.parents('form').find(".g-recaptcha-response").val(token);
-			  		            object.parents('form').submit();
-			  		        }
-			  		    });
-			  		});
-			  	});
-			  </script>
+				<script src='https://www.google.com/recaptcha/api.js'></script>
 			<!-- /tmpl_if -->
 		<!-- /tmpl_if -->
 		
@@ -178,7 +181,7 @@
 					value="<!-- tmpl_var recaptcha_public_key -->"
 				>
 				
-				<button class="button success expand" id="ddm_subscribe_button">
+				<button class="g-recaptcha button success expand" id="recaptcha_subscribe_button">
 					Subscribe
 				</button>
 			
