--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -128,6 +128,7 @@
 								HTML to include <em>before</em> feed (optional)
 							</label> 
 							<textarea 
+								data-gramm="false"
 								name="feed_url_pre_html" 
 								rows="10" 
 								id="feed_url_pre_html"><!-- tmpl_var feed_url_pre_html escape="HTML" --></textarea>
@@ -142,6 +143,7 @@
 								HTML to include <em>after</em> feed  (optional)
 							</label>
 							<textarea 
+								data-gramm="false"
 								name="feed_url_post_html" 
 								rows="10" 
 								id="feed_url_post_html"><!-- tmpl_var feed_url_post_html escape="HTML" --></textarea>
