--- a/dada/templates/archive_options_screen.tmpl
+++ b/dada/templates/archive_options_screen.tmpl
@@ -87,7 +87,7 @@
 					Only allow subscribers to view archived messages
 				</label>
 
-				<!-- tmpl_unless PROFILE_ENABLED -->
+				<!-- tmpl_unless profile_settings.enabled -->
 					<div class="alert-box info radius">
 						Disabled. <!-- tmpl_var PROGRAM_NAME --> Profiles themselves are not enabled.
 					</div> 
