Let's simplify this further.

--- a/dada/installer-disabled/templates/ckeditor_config_js.tmpl
+++ b/dada/installer-disabled/templates/ckeditor_config_js.tmpl
@@ -17,7 +17,7 @@ CKEDITOR.editorConfig = function(config) {
    config.filebrowserUploadUrl      = null;
    config.filebrowserImageUploadUrl = null;
    config.filebrowserFlashUploadUrl = null;
-   config.removeDialogTabs = 'link:upload;image:Upload';
+   config.removeDialogTabs = 'link:upload;image:Link;image:Upload';
    <!-- /tmpl_if --> 
    
    config.height                    = '30em';
