--- a/dada/templates/send_email_layout_widget.tmpl
+++ b/dada/templates/send_email_layout_widget.tmpl
@@ -42,6 +42,22 @@
 							>
 							For Discussion List Messages
 						</label>
+						
+						
+						<label for="layout_custom">
+								<input 
+									type="radio"
+									name="layout"
+									id="layout_custom"
+									value="custom"
+									<!-- tmpl_if expr="(default_layout eq 'custom')" -->
+										checked="checked"
+									<!-- /tmpl_if -->
+									>
+									Custom
+								</label>
+						
+						
 					
 					
 					<label for="layout_old_school">
