--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -654,6 +654,13 @@ $ADMIN_MENU = [
 					-Function   => 'email_themes',
 					-Activated  => 1,
 					},
+					
+					{
+					-Title      => 'Custom Mailing Mailing Layout',
+					-Title_URL  => "$S_PROGRAM_URL?flavor=edit_type",
+					-Function   => 'edit_type',
+					-Activated  => 1,
+					}
 
 					{
 					-Title      => 'HTML Screen Templates',
