That makes more sense.

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -656,11 +656,11 @@ $ADMIN_MENU = [
 					},
 					
 					{
-					-Title      => 'Custom Mailing Mailing Layout',
+					-Title      => 'Custom Mass Mailing Layout',
 					-Title_URL  => "$S_PROGRAM_URL?flavor=edit_type",
 					-Function   => 'edit_type',
 					-Activated  => 1,
-					}
+					},
 
 					{
 					-Title      => 'HTML Screen Templates',
