Give you a little clue, you know?

--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -132,6 +132,16 @@
 		<div class="small-1 columns">
 		</div>	
 		<div class="small-11 columns">
+			
+			 <div class="alert-box info radius">
+				 Set  a Custom layout in, 
+				<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=edit_type" target="_blank"> 
+					Appearance: Custom Mass Mailing Layout
+				</a>
+			</div>
+			
+			
+			
 			<label for="mass_mailing_default_layout_default">
 				<input 
 					type="radio"
