--- a/dada/templates/list_type_switch_widget.tmpl
+++ b/dada/templates/list_type_switch_widget.tmpl
@@ -1,128 +1,140 @@
 <!-- begin list_type_switch_widget.tmpl -->
-		<!-- tmpl_if flavor_is_view_list --> 
-			<ul  class="tabs" data-tab>
-		<!-- tmpl_else -->
-			<ul  class="tabs">
-		<!-- /tmpl_if -->
-			<li class="tab-title <!-- tmpl_if EXPR="(type eq 'list')" -->active<!-- /tmpl_if -->" >
-				<!-- tmpl_if flavor_is_view_list --> 
-					<a href="#" class="change_type" data-type="list">
-				<!-- tmpl_else --> 
-					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=list">					
-				<!-- /tmpl_if -->
-				  <span>
-					Subscribers  (<!-- tmpl_var list_subscribers_num -->)
-				  </span>
-				</a>				
-			</li>
-			
-			
-			<!-- tmpl_if flavor_is_view_list --> 
-				<!-- tmpl_if list_settings.enable_subscription_approval_step -->
-					<li class="tab-title <!-- tmpl_if EXPR="(type eq 'sub_request_list')" --> active<!-- /tmpl_if -->"> 
-						<a href="#" class="change_type" data-type="sub_request_list">
-					  <span>
-						Subscription Requests  (<!-- tmpl_var sub_request_list_subscribers_num -->)
-					  </span>
-					</a>
-					</li>
-				<!-- /tmpl_if --> 
+	<!-- tmpl_if flavor_is_view_list --> 
+		<ul  class="tabs" data-tab>
+	<!-- tmpl_else -->
+		<ul  class="tabs">
+	<!-- /tmpl_if -->
 
-				<!-- tmpl_if list_settings.private_list -->
-					<li class="tab-title <!-- tmpl_if EXPR="(type eq 'unsub_request_list')" -->active<!-- /tmpl_if -->"> 
-						<a href="#" class="change_type" data-type="unsub_request_list">
-					  <span>
-						Unsubscription Requests  (<!-- tmpl_var unsub_request_list_subscribers_num -->)
-					  </span>
-					</a>
-					</li>
-				<!-- /tmpl_if --> 
-			<!-- /tmpl_if --> 
-			
-			
-			<li class="tab-title <!-- tmpl_if EXPR="(type eq 'black_list')" --> active<!-- /tmpl_if -->">
-			<!-- tmpl_if flavor_is_view_list -->
-				<a href="#" class="change_type" data-type="black_list">
-			<!-- tmpl_else --> 
-				<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=black_list">
-			<!-- /tmpl_if -->
-			<span>
-		   		Black List (<!-- tmpl_var black_list_subscribers_num -->)
-			</span>
+	<li class="tab-title <!-- tmpl_if EXPR="(type eq 'list')" -->active<!-- /tmpl_if -->" >
+		<!-- tmpl_if flavor_is_view_list --> 
+			<a href="#" class="change_type" data-type="list">
+		<!-- tmpl_else --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=list">					
+		<!-- /tmpl_if -->
+		  <span>
+			Subscribers  (<!-- tmpl_var list_subscribers_num -->)
+		  </span>
+		</a>				
+	</li>
+	
+	
+	<li class="tab-title <!-- tmpl_if EXPR="(type eq 'test_list')" --> active<!-- /tmpl_if -->">
+		<!-- tmpl_if flavor_is_view_list -->
+			<a href="#" class="change_type" data-type="test_list">
+		<!-- tmpl_else --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=test_list">
+		<!-- /tmpl_if -->
+		<span>
+	   		Testers (<!-- tmpl_var test_list_subscribers_num -->)
+		</span>
+		</a>
+	</li>
+	
+	<!-- tmpl_if flavor_is_view_list --> 
+		<!-- tmpl_if list_settings.enable_subscription_approval_step -->
+			<li class="tab-title <!-- tmpl_if EXPR="(type eq 'sub_request_list')" --> active<!-- /tmpl_if -->"> 
+				<a href="#" class="change_type" data-type="sub_request_list">
+			  <span>
+				Subscription Requests  (<!-- tmpl_var sub_request_list_subscribers_num -->)
+			  </span>
 			</a>
 			</li>
-			
-			<!-- tmpl_if list_settings.enable_white_list -->
-				<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'white_list')" --> active<!-- /tmpl_if -->">
-				<!-- tmpl_if flavor_is_view_list --> 
-					<a href="#" class="change_type" data-type="white_list">
-				<!-- tmpl_else --> 
-					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=white_list">
-				<!-- /tmpl_if -->
-				   <span>
-					White List (<!-- tmpl_var white_list_subscribers_num -->)
-				    </span>
-				 </a>
-				</li>
-			<!-- /tmpl_if --> 
-			
-			<!-- tmpl_if list_settings.enable_authorized_sending -->
-				<li class="tab-title <!-- tmpl_if EXPR="(type eq 'authorized_senders')" -->active<!-- /tmpl_if -->">
-				<!-- tmpl_if flavor_is_view_list --> 
-				  	<a href="#" class="change_type" data-type="authorized_senders">
-				<!-- tmpl_else --> 
-					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=authorized_senders">
-				<!-- /tmpl_if -->
-				   <span>
-					Authorized Senders (<!-- tmpl_var authorized_senders_num -->)
-			   	  </span>
-			   </a>
-				</li>
-			<!-- /tmpl_if -->
-			
+		<!-- /tmpl_if --> 
 
-			<!-- tmpl_if list_settings.enable_moderation -->
-				<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'moderators')" -->active<!-- /tmpl_if -->">
-				<!-- tmpl_if flavor_is_view_list --> 
-				  	<a href="#" class="change_type" data-type="moderators">
-				<!-- tmpl_else --> 
-					<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=moderators">
-				<!-- /tmpl_if -->
-				   <span>
-					Moderators (<!-- tmpl_var moderators_num -->)
-			   	  </span>
-			   </a>
-				</li>
-			<!-- /tmpl_if -->
+		<!-- tmpl_if list_settings.private_list -->
+			<li class="tab-title <!-- tmpl_if EXPR="(type eq 'unsub_request_list')" -->active<!-- /tmpl_if -->"> 
+				<a href="#" class="change_type" data-type="unsub_request_list">
+			  <span>
+				Unsubscription Requests  (<!-- tmpl_var unsub_request_list_subscribers_num -->)
+			  </span>
+			</a>
+			</li>
+		<!-- /tmpl_if --> 
+	<!-- /tmpl_if --> 
+				
+	<li class="tab-title <!-- tmpl_if EXPR="(type eq 'black_list')" --> active<!-- /tmpl_if -->">
+		<!-- tmpl_if flavor_is_view_list -->
+			<a href="#" class="change_type" data-type="black_list">
+		<!-- tmpl_else --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=black_list">
+		<!-- /tmpl_if -->
+		<span>
+	   		Black List (<!-- tmpl_var black_list_subscribers_num -->)
+		</span>
+		</a>
+	</li>
+	
+	<!-- tmpl_if list_settings.enable_white_list -->
+		<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'white_list')" --> active<!-- /tmpl_if -->">
+		<!-- tmpl_if flavor_is_view_list --> 
+			<a href="#" class="change_type" data-type="white_list">
+		<!-- tmpl_else --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=white_list">
+		<!-- /tmpl_if -->
+		   <span>
+			White List (<!-- tmpl_var white_list_subscribers_num -->)
+		    </span>
+		 </a>
+		</li>
+	<!-- /tmpl_if --> 
+	
+	<!-- tmpl_if list_settings.enable_authorized_sending -->
+		<li class="tab-title <!-- tmpl_if EXPR="(type eq 'authorized_senders')" -->active<!-- /tmpl_if -->">
+		<!-- tmpl_if flavor_is_view_list --> 
+		  	<a href="#" class="change_type" data-type="authorized_senders">
+		<!-- tmpl_else --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=authorized_senders">
+		<!-- /tmpl_if -->
+		   <span>
+			Authorized Senders (<!-- tmpl_var authorized_senders_num -->)
+	   	  </span>
+	   </a>
+		</li>
+	<!-- /tmpl_if -->
+	
 
+	<!-- tmpl_if list_settings.enable_moderation -->
+		<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'moderators')" -->active<!-- /tmpl_if -->">
+		<!-- tmpl_if flavor_is_view_list --> 
+		  	<a href="#" class="change_type" data-type="moderators">
+		<!-- tmpl_else --> 
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=<!-- tmpl_var flavor -->;type=moderators">
+		<!-- /tmpl_if -->
+		   <span>
+			Moderators (<!-- tmpl_var moderators_num -->)
+	   	  </span>
+	   </a>
+		</li>
+	<!-- /tmpl_if -->
+
+	
+	<!-- tmpl_if flavor_is_view_list --> 
+		<!-- tmpl_if show_bounced_list -->
+		<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'bounced_list')" -->active<!-- /tmpl_if -->">
+		
+			<a href="#" class="change_type" data-type="bounced_list">
+			 <span>
+				Bouncing Addresses (<!-- tmpl_var bounced_list_num -->)
+			</span>  
+			</a>
+		</li>
 			
-			<!-- tmpl_if flavor_is_view_list --> 
-				<!-- tmpl_if show_bounced_list -->
-				<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'bounced_list')" -->active<!-- /tmpl_if -->">
-				
-					<a href="#" class="change_type" data-type="bounced_list">
-					 <span>
-						Bouncing Addresses (<!-- tmpl_var bounced_list_num -->)
-					</span>  
-					</a>
-				</li>
-					
-				<!-- /tmpl_if -->
-			<!-- /tmpl_if --> 
-			
-			
-			<!-- tmpl_if flavor_is_view_list --> 
-				<!-- tmpl_if list_settings.view_list_show_sub_confirm_list -->
-					<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'sub_confirm_list')" -->active<!-- /tmpl_if -->">
-				
-						<a href="#" class="change_type" data-type="sub_confirm_list">
-						 <span>
-							Unconfirmed Subscribers (<!-- tmpl_var sub_confirm_list_num -->)
-						</span>  
-						</a>
-					</li>
-				<!-- /tmpl_if -->
-			<!-- /tmpl_if -->
+		<!-- /tmpl_if -->
+	<!-- /tmpl_if --> 
+	
+	
+	<!-- tmpl_if flavor_is_view_list --> 
+		<!-- tmpl_if list_settings.view_list_show_sub_confirm_list -->
+			<li  class="tab-title <!-- tmpl_if EXPR="(type eq 'sub_confirm_list')" -->active<!-- /tmpl_if -->">
+		
+				<a href="#" class="change_type" data-type="sub_confirm_list">
+				 <span>
+					Unconfirmed Subscribers (<!-- tmpl_var sub_confirm_list_num -->)
+				</span>  
+				</a>
+			</li>
+		<!-- /tmpl_if -->
+	<!-- /tmpl_if -->
 			
 			
 			
